--- a/Invoice using fastAPI/.env
+++ b/Invoice using fastAPI/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:mohit@localhost:5432/InvoiceMaster
+DATABASE_URL=postgresql://mohit:H2vv4Vue1qrh6n38wkTgwsU0mtOyPp3Y@dpg-d1c9c395pdvs73ekavgg-a/mohit_ckgm
 JWT_SECRET_KEY=supersecretkey123
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=100
